# axon

./: .gitignore  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  GROWTH.md  README.md  SECURITY.md  axon.sh  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  node_pack_proposal.md
.github/workflows/: ci.yml
axon/: __init__.py  __main__.py  cli.py
axon/copilot/: __init__.py  ops.py  service.py
axon/engine/: __init__.py  cache.py  events.py  executor.py  graph.py  runs.py
axon/llm/: __init__.py  providers.py
axon/nodes/: __init__.py  data.py  deep.py  finetune.py  llm.py  ml.py  util.py
axon/sdk/: __init__.py  containers.py  context.py  node.py  params.py  registry.py
axon/server/: app.py  packs.py
axon/storage/: __init__.py  history.py  workflows.py  workspace.py
docs/: architecture.md  writing-nodes.md
examples/: README.md  chat-your-docs.axon.json  digit-classifier.axon.json  finetune-tiny-llm.axon.json  house-prices.axon.json  research-agent.axon.json
examples/data/: quotes.csv
site/: index.html
tests/: conftest.py
tests/copilot/: test_ops.py  test_service.py
tests/engine/: test_cache.py  test_executor.py  test_graph.py
tests/examples/: test_examples.py
tests/llm/: test_providers.py
tests/nodes/: conftest.py  test_data.py  test_deep.py  test_finetune.py  test_llm.py  test_ml.py  test_util.py
tests/sdk/: test_containers.py  test_node_decorator.py  test_params.py
tests/server/: test_api.py  test_static.py
web/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
web/src/: App.tsx  (+4 more)
(+22 files in other folders)
