[project]
name = "axon"
version = "0.1.0"
description = "Build real AI visually. Train, fine-tune, and orchestrate models without writing code. Local-first."
readme = "README.md"
license = { file = "LICENSE.md" }
requires-python = ">=3.12,<3.13"
authors = [{ name = "Axon contributors" }]
keywords = ["machine-learning", "no-code", "visual-programming", "ai", "local-first"]
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "jinja2>=3.1",
]

[project.optional-dependencies]
ml-boost = ["xgboost>=2.0"]
deep = ["torch>=2.3", "onnx>=1.16"]
finetune = [
    "torch>=2.3",
    "transformers>=4.44",
    "peft>=0.12",
    "datasets>=2.20",
    "accelerate>=0.33",
]
rag = ["chromadb>=0.5", "sentence-transformers>=3.0"]
dev = ["pytest>=8.2", "pytest-asyncio>=0.23"]

[project.scripts]
axon = "axon.cli:main"

[project.urls]
Homepage = "https://github.com/Samyrrrrrr990/axon"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["axon"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
